<?xml version="1.0"?>
<package>
  <name>my_navigation_test</name>
  <version>0.0.0</version>
  <description>The my_navigation_test package</description>

  <maintainer email="ch@todo.todo">ch</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cob_bringup_sim</build_depend>
  <build_depend>cob_navigation_global</build_depend>
  <build_depend>navigation_test_skeleton</build_depend>
  <build_depend>navigation_test_helper</build_depend>
  <build_depend>rostest</build_depend>
  <run_depend>cob_bringup_sim</run_depend>
  <run_depend>cob_navigation_global</run_depend>
  <run_depend>navigation_test_skeleton</run_depend>
  <run_depend>navigation_test_helper</run_depend>
  <run_depend>rostest</run_depend>

  <export>
   
  </export>
</package>
